[project]
name = "backend-build-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Savushkin", email = "savushkin-daniil-99@yandex.ru"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
